# quantbench

./: CHANGELOG.md  README.md  generate_svgs.py  pyproject.toml
examples/: profile_model.py  quality_analysis.py  recommend_quant.py
src/quantbench/: __init__.py  _types.py  bandwidth.py  cli.py  compare.py  imatrix.py  layerwise.py  matrix.py  perplexity.py  predict.py  profile.py  recommend.py  report.py
tests/: test_bandwidth.py  test_cli.py  test_compare.py  test_edge_cases.py  test_imatrix.py  test_layerwise.py  test_matrix.py  test_perplexity.py  test_predict.py  test_profile.py  test_recommend.py  test_report.py  test_types.py
