[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantbench"
version = "0.1.0"
description = "Quantization quality analyzer — pure-Python GGUF/safetensors parsing, layerwise analysis, quality prediction. Zero deps."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [{ name = "Zacharie Bhatti" }]
keywords = [
    "quantization",
    "gguf",
    "safetensors",
    "llm",
    "model",
    "compression",
    "quality",
    "analysis",
    "benchmark",
    "evaluation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
cli = ["click>=8.0", "rich>=13.0"]
all = ["quantbench[cli]"]

[project.urls]
Homepage = "https://github.com/stef41/quantbench"
Repository = "https://github.com/stef41/quantbench"
Issues = "https://github.com/stef41/quantbench/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/quantbench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
